--- a/roles/backend/vars/main.yaml
+++ b/roles/backend/vars/main.yaml
@@ -2,4 +2,4 @@ mysql_root_password: ExpenseApp1
 mysql_user: root
 APP_LOCAION: /app
 COMPONENT: backend
-mysql_host: mysql-{{ ENVIRONMENT }}.daws82s.cloud
+mysql_host: "mysql-{{ ENVIRONMENT }}.daws82s.cloud"
