--- a/roles/frontend/vars/main.yaml
+++ b/roles/frontend/vars/main.yaml
@@ -1,3 +1,3 @@
-backend_host: backend.daws82s.cloud
+backend_host: "backend.app-{{ ENVIRONMENT }}.daws82s.cloud"
 APP_LOCAION: /usr/share/nginx/html
 COMPONENT: frontend
